# PPGCAP_TEMTCRP

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  build.sh  release.sh  z1.csv  z2.csv  z3.csv
.devcontainer/: Dockerfile  devcontainer.json
bases/pre_termo/: data.csv
src/: common.cpp  common.hpp  knn.cpp  knn.hpp  main.cpp  method_1.cpp  method_2.cpp  method_3.cpp  split.cpp
